# alpaca-trade-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/alpaca-trade/: Cargo.toml  README.md
crates/alpaca-trade-mock/: Cargo.toml  README.md
crates/alpaca-trade-mock/src/: app.rs  auth.rs  lib.rs  main.rs  routes.rs  state.rs
crates/alpaca-trade-mock/src/admin/: faults.rs  mod.rs
crates/alpaca-trade-mock/src/handlers/: account.rs  activities.rs  health.rs  mod.rs  orders.rs  positions.rs
crates/alpaca-trade-mock/src/state/: account.rs  activities.rs  executions.rs  market_data.rs  mod.rs  positions.rs
crates/alpaca-trade-mock/tests/: account_routes.rs  activities_routes.rs  app_routes.rs  orders_routes.rs  positions_routes.rs  trading_state.rs
crates/alpaca-trade/examples/: account_get.rs  assets_list.rs  client_builder.rs
crates/alpaca-trade/src/: auth.rs  client.rs  error.rs  lib.rs  observer.rs  retry.rs
crates/alpaca-trade/src/account/: client.rs  mod.rs  model.rs
crates/alpaca-trade/src/assets/: client.rs  mod.rs  model.rs  request.rs
crates/alpaca-trade/src/calendar/: client.rs  mod.rs  model.rs  request.rs
crates/alpaca-trade/src/clock/: client.rs  mod.rs  model.rs
crates/alpaca-trade/src/common/: decimal.rs  integer.rs  mod.rs  pagination.rs  query.rs  validate.rs
crates/alpaca-trade/src/options_contracts/: client.rs  mod.rs  model.rs  request.rs
crates/alpaca-trade/src/orders/: client.rs  mod.rs  model.rs  request.rs
crates/alpaca-trade/src/transport/: endpoint.rs  http.rs  mod.rs  request.rs
crates/alpaca-trade/tests/: account_live.rs  account_mock.rs  account_model.rs  account_transport.rs  assets_live.rs  assets_model.rs  assets_transport.rs  calendar_live.rs  calendar_model.rs  calendar_transport.rs  client_builder.rs  clock_live.rs  clock_model.rs  clock_transport.rs  mock_account_errors.rs  mock_account_smoke.rs  options_contracts_live.rs  options_contracts_model.rs  options_contracts_transport.rs  orders_model.rs  orders_mutating.rs  orders_support.rs  orders_transport.rs  public_api.rs  request_validation.rs
crates/alpaca-trade/tests/support/: http_server.rs  mod.rs  orders.rs
tools/api-coverage/: trading-api.json
