[workspace]
members = ["crates/alpaca-trade", "crates/alpaca-trade-mock"]
resolver = "3"

[workspace.package]
version = "0.8.4"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wmzhai/alpaca-trade-rs"

[workspace.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net"] }
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = "0.6"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
parking_lot = "0.12"
alpaca-data = "0.9.2"
dotenvy = "0.15"
