[package]
name = "alpaca-trade-mock"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Internal mock server scaffold for alpaca-trade workspace testing"
readme = "README.md"
keywords = ["alpaca", "mock", "trading", "testing"]
categories = ["development-tools::testing"]
exclude = ["/.agents/**", "/.github/**", "/AGENTS.md", "/docs/superpowers/**", "/memory/**"]

[lib]
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
