[package]
name = "alpaca-trade-mock"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Internal mock server scaffold for alpaca-trade workspace testing"
readme = "README.md"
keywords = ["alpaca", "mock", "trading", "testing"]
categories = ["development-tools::testing"]
exclude = ["/.agents/**", "/.github/**", "/AGENTS.md", "/docs/superpowers/**", "/memory/**"]

[lib]
path = "src/lib.rs"

[dependencies]
alpaca-data.workspace = true
alpaca-trade = { path = "../alpaca-trade" }
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
parking_lot.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
