[package]
name = "alpaca-trade"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust client for the non-crypto Alpaca Trading HTTP API"
readme = "README.md"
exclude = ["/AGENTS.md", "/docs/superpowers/**", "/memory/**"]

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
alpaca-trade-mock = { path = "../alpaca-trade-mock" }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
