[package]
name = "alpaca-trade"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust client for the non-crypto Alpaca Trading HTTP API"
readme = "README.md"
keywords = ["alpaca", "trading", "paper-trading"]
categories = ["api-bindings", "asynchronous"]
exclude = ["/.agents/**", "/.github/**", "/AGENTS.md", "/docs/superpowers/**", "/memory/**"]

[dependencies]
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
alpaca-data.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
